--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <a  class="logo-header" href="/">Web<span>Studio</span></a>
         <ul class="site-nav list">
             <li><a href="#">Студія</a></li>
-            <li><a href="#">Портфоліо</a></li>
+            <li><a href="./portfolio.html" class="current">Портфоліо</a></li>
             <li><a href="#">Контакти</a></li>
         </ul>
     </nav>
