--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
         </ul>
     </header>
     <main>
+        <h1 class="visually-hidden">Портфолио</h1>
         <section class="access-buttons">
             <h2 class="visually-hidden">Кнопки доступу</h2>
             <ul class="portfolio-button list">
