--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <a class="logo-header" href="/">Web<span>Studio</span></a>
         <ul class="site-nav list">
-            <li><a href="#">Студія</a></li>
+            <li><a href="./index.html" class="current">Студія</a></li>
             <li><a href="./portfolio.html">Портфоліо</a></li>
             <li><a href="#">Контакти</a></li>
         </ul>
