--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <nav>
         <a  class="logo-header" href="/">Web<span>Studio</span></a>
         <ul class="site-nav list">
-            <li><a href="#">Студія</a></li>
+            <li><a href="./index.html">Студія</a></li>
             <li><a href="./portfolio.html" class="current">Портфоліо</a></li>
             <li><a href="#">Контакти</a></li>
         </ul>
@@ -30,9 +30,9 @@
         </ul>
     </header>
     <main>
-        <h1 class="visually-hidden">Портфолио</h1>
-        <section class="access-buttons">
-            <h2 class="visually-hidden">Кнопки доступу</h2>
+        
+        <section class="projects">
+            <h1 class="visually-hidden">Портфолио</h1>
             <ul class="portfolio-button list">
                 <li><button type="button">Усі</button></li>
                 <li><button type="button">Веб-сайти</button></li>
@@ -40,16 +40,14 @@
                 <li><button type="button">Дизайн</button></li>
                 <li><button type="button">Маркетинг</button></li>
             </ul>
-
-        </section>
-        <section class="projects">
-            <h2 class="visually-hidden">Проекти</h2>
             <ul class="projects-list list">
                 <li>
-                    <img src="./images/project1.jpg" alt="notebook" width="370">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
-                </li>
+                    <a href="#">
+                        <img src="./images/project1.jpg" alt="notebook" width="370">
+                        <h3>Технокряк</h3>
+                        <p>Веб-сайт</p>
+                    </li> 
+                    </a>
                 <li>
                     <img src="./images/project2.jpg" alt="basketball" width="370">
                     <h3>Постер New Orlean vs Golden Star</h3>
