--- a/portfolio.html
+++ b/portfolio.html
@@ -49,44 +49,60 @@
                     </li> 
                     </a>
                 <li>
-                    <img src="./images/project2.jpg" alt="basketball" width="370">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <a href="#">
+                        <img src="./images/project2.jpg" alt="basketball" width="370">
+                        <h3>Постер New Orlean vs Golden Star</h3>
+                        <p>Дизайн</p>
+                    </a>                   
                 </li>
                 <li>
-                    <img src="./images/project3.jpg" alt="seafood-logo" width="370">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Додаток</p>
+                    <a href="#">
+                        <img src="./images/project3.jpg" alt="seafood-logo" width="370">
+                        <h3>Ресторан Seafood</h3>
+                        <p>Додаток</p>
+                    </a>                  
                 </li>
                 <li>
-                    <img src="./images/project4.jpg" alt="headphones" width="370">
-                    <h3>Проєкт Prime</h3>
-                    <p>Маркетинг</p>
+                    <a href="#">
+                        <img src="./images/project4.jpg" alt="headphones" width="370">
+                        <h3>Проєкт Prime</h3>
+                        <p>Маркетинг</p>
+                    </a>                   
                 </li>
                 <li>
-                    <img src="./images/project5.jpg" alt="boxes" width="370">
-                    <h3>Проєкт Boxes</h3>
-                    <p>Додаток</p>
+                    <a href="#">
+                        <img src="./images/project5.jpg" alt="boxes" width="370">
+                        <h3>Проєкт Boxes</h3>
+                        <p>Додаток</p>
+                    </a>                   
                 </li>
                 <li>
-                    <img src="./images/project6.jpg" alt="monitor" width="370">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <a href="#">
+                        <img src="./images/project6.jpg" alt="monitor" width="370">
+                        <h3>Inspiration has no Borders</h3>
+                        <p>Веб-сайт</p>
+                    </a>                   
                 </li>
                 <li>
-                    <img src="./images/project7.jpg" alt="journal" width="370">
-                    <h3>Видання Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <a href="#">
+                        <img src="./images/project7.jpg" alt="journal" width="370">
+                        <h3>Видання Limited Edition</h3>
+                        <p>Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/project8.jpg" alt="lable" width="370">
-                    <h3>Проєкт LAB</h3>
-                    <p>Маркетинг</p>
+                    <a href="#">
+                        <img src="./images/project8.jpg" alt="lable" width="370">
+                        <h3>Проєкт LAB</h3>
+                        <p>Маркетинг</p>
+                    </a>                   
                 </li>
                 <li>
-                    <img src="./images/project9.jpg" alt="notebook-work" width="370">
-                    <h3>Growing Business</h3>
-                    <p>Додаток</p>
+                    <a href="#">
+                        <img src="./images/project9.jpg" alt="notebook-work" width="370">
+                        <h3>Growing Business</h3>
+                        <p>Додаток</p>
+                    </a>                   
                 </li>
             </ul>
         </section>
